[metadata]
name = navigation
version = 0.0.1
author = Will Maclean
author_email = wmac0001@student.monash.edu
description = Navigation Environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/will-maclean/NavigationEnv
project_urls =
    Bug Tracker = https://github.com/will-maclean/NavigationEnv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    gym==0.21
    numpy
    matplotlib
    seaborn

[options.packages.find]
where = src
